@@ -81,7 +81,7 @@
 		
 		<field name="show_empty_categories" type="radio"
 				label="JGLOBAL_SHOW_EMPTY_CATEGORIES_LABEL"
-				description="JGLOBAL_SHOW_EMPTY_CATEGORIES_DESC"
+				description="COM_WEBLINKS_SHOW_EMPTY_CATEGORIES_DESC"
 				default="0"
 			>
 				<option value="0">JHIDE</option>
@@ -138,7 +138,7 @@
 			<field name="show_empty_categories_cat" type="radio"
 				default="0"		
 				label="JGLOBAL_SHOW_EMPTY_CATEGORIES_LABEL"
-				description="JGLOBAL_SHOW_EMPTY_CATEGORIES_DESC"
+				description="COM_WEBLINKS_SHOW_EMPTY_CATEGORIES_DESC"
 			>
 				<option value="0">JHIDE</option>
 				<option value="1">JSHOW</option>
