@@ -87,6 +87,7 @@ COM_NEWSFEEDS_SAVE_SUCCESS="News feed successfully saved"
 COM_NEWSFEEDS_SEARCH_IN_TITLE="Search"
 COM_NEWSFEEDS_SELECT_A_FEED="Select feed"
 COM_NEWSFEEDS_SELECT_FEED="Select feed"
+COM_NEWSFEEDS_SHOW_EMPTY_CATEGORIES_DESC="If Show, empty categories will display. A category is only empty - if it has no Newsfeeds or subcategories."
 COM_NEWSFEEDS_SUBMENU_CATEGORIES="Categories"
 COM_NEWSFEEDS_SUBMENU_NEWSFEEDS="News Feeds"
 COM_NEWSFEEDS_UNPUBLISH_ITEM="Unpublish News Feed"
